@@ -1,3 +1,15 @@
+Mon Mar 24 15:18:28 UTC 2008  Chad Elliott  <elliott_c@ociweb.com>
+
+        * docs/USAGE:
+
+          Document the 'main_functions' configuration file setting.
+
+        * modules/Driver.pm:
+        * modules/ProjectCreator.pm:
+
+          Support the ability to specify additional "main" functions to work
+          with automatic executable project recognition.
+
 Fri Mar 21 16:06:00 UTC 2008  Chad Elliott  <elliott_c@ociweb.com>
 
         * modules/MakeWorkspaceBase.pm:
